--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2023 SAP SE
+#
+# SPDX-License-Identifier: Apache-2.0
+
 [submodule "fedem-foundation"]
 	path = fedem-foundation
 	url = ../fedem-foundation.git
