--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -13,11 +13,15 @@ on:
 
 jobs:
   bump-build-no:
+    if: github.event.commits[0].author.name != 'github-actions'
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out repository
+      - name: Check out source code repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.ACCESS_PAT }}
 
       - name: Bump build number
         run: echo "VERSION=$(awk -F. '{$NF++;print}' OFS=. < cfg/VERSION)" >> $GITHUB_ENV
@@ -27,7 +31,7 @@ jobs:
 
       - name: Push updated VERSION file
         run: |
-          git config user.name "${{ github.actor }}"
-          git config user.email "${{ github.actor }}@users.noreply.github.com"
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git commit -m"chore(version): build number $VERSION" cfg/VERSION
           git push origin HEAD
