--- a/vpmDB/CMakeLists.txt
+++ b/vpmDB/CMakeLists.txt
@@ -13,17 +13,34 @@ message ( STATUS "INFORMATION : Processing unit ${UNIT_ID}" )
 
 
 # Check if the Qt package is available (not needed on Linux)
-if ( USE_QT )
+set ( NO_QT6 FALSE )
+if ( "${USE_QT}" STREQUAL "Qt6" )
+  find_package ( Qt6 COMPONENTS Core )
+  if ( NOT Qt6_FOUND )
+    set ( NO_QT6 TRUE )
+  endif ( NOT Qt6_FOUND )
+endif ( "${USE_QT}" STREQUAL "Qt6" )
+set ( NO_QT5 FALSE )
+if ( "${USE_QT}" STREQUAL "Qt5" OR NO_QT6 )
+  find_package ( Qt5 COMPONENTS Core )
+  if ( NOT Qt5_FOUND )
+    set ( NO_QT5 TRUE )
+  endif ( NOT Qt5_FOUND )
+endif ( "${USE_QT}" STREQUAL "Qt5" OR NO_QT6 )
+if ( "${USE_QT}" STREQUAL "Qt4" OR NO_QT5 )
   find_package ( Qt4 COMPONENTS QtCore )
-endif ( USE_QT )
-if ( Qt4_FOUND )
+endif ( "${USE_QT}" STREQUAL "Qt4" OR NO_QT5 )
+
+if ( Qt6_FOUND OR Qt5_FOUND OR Qt4_FOUND )
   string ( APPEND CMAKE_CXX_FLAGS " -DFT_HAS_QT" )
 elseif ( LINUX )
   string ( APPEND CMAKE_CXX_FLAGS " -DFT_HAS_DIRENT" )
-endif ( Qt4_FOUND )
+endif ( Qt6_FOUND OR Qt5_FOUND OR Qt4_FOUND )
+
 if ( USE_MEMPOOL )
   string ( APPEND CMAKE_CXX_FLAGS " -DFT_USE_MEMPOOL" )
 endif ( USE_MEMPOOL )
+
 if ( USE_VISUALS )
   string ( APPEND CMAKE_CXX_FLAGS " -DFT_USE_VISUALS" )
 endif ( USE_VISUALS )
@@ -110,9 +127,9 @@ endif ( NO_FATIGUE )
 set ( DEPENDENCY_LIST ${FT_KERNEL_LIBRARIES} ${FT_COMMON_LIBRARIES} )
 if ( Coin_library )
   list ( INSERT DEPENDENCY_LIST 0 vpmDisplay )
-  if ( WIN AND DEFINED ENV{COIN_ROOT} )
+  if ( DEFINED ENV{COIN_ROOT} )
     include_directories ( "$ENV{COIN_ROOT}/include" )
-  endif ( WIN AND DEFINED ENV{COIN_ROOT} )
+  endif ( DEFINED ENV{COIN_ROOT} )
 endif ( Coin_library )
 if ( TARGET ChainShape )
   string ( APPEND CMAKE_CXX_FLAGS " -DFT_HAVE_CHAINSHAPE" )
@@ -121,11 +138,18 @@ endif ( TARGET ChainShape )
 
 
 message ( STATUS "Building library ${LIB_ID}" )
-if ( Qt4_FOUND )
+if ( Qt6_FOUND )
+  list ( APPEND DEPENDENCY_LIST Qt6::Core )
+  message ( STATUS "Configuring with Qt6" )
+elseif ( Qt5_FOUND )
+  list ( APPEND DEPENDENCY_LIST Qt5::Core )
+  message ( STATUS "Configuring with Qt5" )
+elseif ( Qt4_FOUND )
   list ( APPEND DEPENDENCY_LIST Qt4::QtCore )
-elseif ( USE_QT )
-  message ( STATUS "Configuring without Qt since Qt4 package is not found" )
-endif ( Qt4_FOUND )
+  message ( STATUS "Configuring with Qt4" )
+elseif ( NOT "${USE_QT}" STREQUAL "OFF" )
+  message ( STATUS "Configuring without Qt since no Qt package is found" )
+endif ( Qt6_FOUND )
 
 add_library ( ${LIB_ID} ${CPP_FILES} ${HPP_FILES} )
 target_link_libraries ( ${LIB_ID} ${DEPENDENCY_LIST} )
