Add unit test for recursive removal of an empty directory

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -29,11 +29,15 @@ if ( "${USE_QT}" STREQUAL "Qt4" OR NO_QT5 )
   find_package ( Qt4 COMPONENTS QtCore )
 endif ( "${USE_QT}" STREQUAL "Qt4" OR NO_QT5 )
 
-if ( Qt6_FOUND OR Qt5_FOUND OR Qt4_FOUND )
-  string ( APPEND CMAKE_CXX_FLAGS " -DFT_HAS_QT" )
+if ( Qt6_FOUND )
+  string ( APPEND CMAKE_CXX_FLAGS " -DFT_HAS_QT=6" )
+elseif ( Qt5_FOUND )
+  string ( APPEND CMAKE_CXX_FLAGS " -DFT_HAS_QT=5" )
+elseif ( Qt4_FOUND )
+  string ( APPEND CMAKE_CXX_FLAGS " -DFT_HAS_QT=4" )
 elseif ( LINUX )
   string ( APPEND CMAKE_CXX_FLAGS " -DFT_HAS_DIRENT" )
-endif ( Qt6_FOUND OR Qt5_FOUND OR Qt4_FOUND )
+endif ( Qt6_FOUND )
 if ( USE_MEMPOOL )
   string ( APPEND CMAKE_CXX_FLAGS " -DFT_USE_MEMPOOL" )
 endif ( USE_MEMPOOL )
@@ -47,7 +51,7 @@ add_executable ( test_FmPart test_FmPart.C )
 add_cpp_test ( test_FmPart vpmDB )
 
 add_executable ( test_FmFileSys test_FmFileSys.C ../vpmDB/FmFileSys.C )
-target_link_libraries ( test_FmFileSys FFaOS )
+add_cpp_test ( test_FmFileSys FFaOS )
 if ( Qt6_FOUND )
   target_link_libraries ( test_FmFileSys Qt6::Core )
 elseif ( Qt5_FOUND )
