Qt5 and Qt6 need the full path as argument to QDir::rmdir()

--- a/vpmDB/CMakeLists.txt
+++ b/vpmDB/CMakeLists.txt
@@ -31,11 +31,15 @@ if ( "${USE_QT}" STREQUAL "Qt4" OR NO_QT5 )
   find_package ( Qt4 COMPONENTS QtCore )
 endif ( "${USE_QT}" STREQUAL "Qt4" OR NO_QT5 )
 
-if ( Qt6_FOUND OR Qt5_FOUND OR Qt4_FOUND )
-  string ( APPEND CMAKE_CXX_FLAGS " -DFT_HAS_QT" )
+if ( Qt6_FOUND )
+  string ( APPEND CMAKE_CXX_FLAGS " -DFT_HAS_QT=6" )
+elseif ( Qt5_FOUND )
+  string ( APPEND CMAKE_CXX_FLAGS " -DFT_HAS_QT=5" )
+elseif ( Qt4_FOUND )
+  string ( APPEND CMAKE_CXX_FLAGS " -DFT_HAS_QT=4" )
 elseif ( LINUX )
   string ( APPEND CMAKE_CXX_FLAGS " -DFT_HAS_DIRENT" )
-endif ( Qt6_FOUND OR Qt5_FOUND OR Qt4_FOUND )
+endif ( Qt6_FOUND )
 
 if ( USE_MEMPOOL )
   string ( APPEND CMAKE_CXX_FLAGS " -DFT_USE_MEMPOOL" )
