Add modified find rule for Qt4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,11 @@ else ( _MODULES )
   message ( STATUS "ERROR : Missing path to FedemConfig.cmake" )
   message ( FATAL_ERROR "Set environment variable CMAKE_MODULES and try again" )
 endif ( _MODULES )
+set ( _MODULES "${PROJECT_SOURCE_DIR}/cmake/Modules" )
+if ( NOT "${USE_QT}" STREQUAL "OFF" AND IS_DIRECTORY ${_MODULES} )
+  message ( STATUS "NOTE : Using ${_MODULES}" )
+  list ( APPEND CMAKE_MODULE_PATH ${_MODULES} )
+endif ( NOT "${USE_QT}" STREQUAL "OFF" AND IS_DIRECTORY ${_MODULES} )
 unset ( _MODULES CACHE )
 
 include ( CheckPFUnit )
