Add test_extfunc.py testing overriding external functions from file. Move SLA solver test to separate python file.

--- a/test/fedempy/CMakeLists.txt
+++ b/test/fedempy/CMakeLists.txt
@@ -98,6 +98,8 @@ if ( IS_DIRECTORY ${TEST_DIR} )
   add_fedempy_test ( reducer TEST_DIR=${TEST_DIR} )
   add_fedempy_test ( solver TEST_DIR=${TEST_DIR} )
   set_tests_properties ( fedempy_solver PROPERTIES DEPENDS fedempy_reducer )
+  add_fedempy_test ( solveSLA TEST_DIR=${TEST_DIR} )
+  add_fedempy_test ( extfunc TEST_DIR=${TEST_DIR} )
   add_fedempy_test ( inverse TEST_DIR=${TEST_DIR} )
   add_fedempy_test ( Microbatch SRC_DIR=${CMAKE_CURRENT_SOURCE_DIR};TEST_DIR=${TEST_DIR} )
   add_fedempy_test ( SLA SRC_DIR=${CMAKE_CURRENT_SOURCE_DIR};TEST_DIR=${TEST_DIR} )
