Invoke FFlLinkHandler::dump() only if FT_USE_PROFILER is defined, in addition to the -memPoll command-line option which now is an int

--- a/vpmDB/CMakeLists.txt
+++ b/vpmDB/CMakeLists.txt
@@ -49,6 +49,10 @@ if ( USE_MEMPOOL )
   string ( APPEND CMAKE_CXX_FLAGS " -DFT_USE_MEMPOOL" )
 endif ( USE_MEMPOOL )
 
+if ( USE_PROFILER )
+  string ( APPEND CMAKE_CXX_FLAGS " -DFT_USE_PROFILER" )
+endif ( USE_PROFILER )
+
 if ( USE_VISUALS )
   string ( APPEND CMAKE_CXX_FLAGS " -DFT_USE_VISUALS" )
 endif ( USE_VISUALS )
